--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.3-rc.0",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.1",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
